# android_bootable_steam_cryptsetup

./: config.h  config.h.in  config.status  configure  configure.in  libtool
crypto/: Android.mk  android-config.mk
lib/: Android.mk  Makefile.am  backends.c  gcrypt.c  internal.h  libcryptsetup.pc  mlockall.S  munlockall.S  openssl.c  setup.c
libpopt/: Android.mk  config.h
luks/: Android.mk  Makefile.am  af.c  keyencryption.c  pbkdf.c
po/: Makefile.in  POTFILES  cryptsetup.pot  de.po  fr.po  id.po  it.po  nl.po  pl.po  sv.po  vi.po
src/: Android.mk  cryptsetup.c
tests/: align-test  compat-test
